font issues on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -94,7 +94,7 @@ button {
   color: var(--gold);
   font-weight: 900;
   letter-spacing: -.05em;
-  font-family: 'Big Caslon', Helvetica, Arial, sans-serif;
+  font-family: 'Big Caslon', Helvetica, Arial, sans-serif !important;
   margin-left: -.05em;
   margin-bottom: 20px;
   line-height: .8;
